[package]
name = "rocket-app"
version = "0.1.0"
authors = ["aidxn <asmaidan@outlook.com>", "edfloreshz <edfloreshz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
json = "0.12.4"